ctpgo/cctptrade_api_darwin.h

DLL_EXPORT_C_DECL int WPCTP dCTP_GetSystemInfo(char *pSystemInfo, int nLen);
DLL_EXPORT_C_DECL int WPCTP dCTP_GetSystemInfoUnAesEncode(char *pSystemInfo, int nLen);
DLL_EXPORT_C_DECL void* WPCTP dCTP_GetDataCollectApiVersion();
DLL_EXPORT_C_DECL void* WPCTP tCreateApi(const char *pszFlowPath);
DLL_EXPORT_C_DECL void* WPCTP tCreateSpi();
DLL_EXPORT_C_DECL void* WPCTP tGetApiVersion();
DLL_EXPORT_C_DECL void* WPCTP tGetTradingDay(void *api);