pyctp/macos/ctptrade_api.py

#!/usr/bin/env python3
# -*- encoding: utf-8 -*-
# LUX et VERITAS
# Create On: 2025/04/06 13:21:04

import os
import copy
import platform
from ctypes import *
from pyctp.macos.ctp_struct import *


class Trade(object):

    def __init__(self, pszFlowPath="./log_trade/") -> None:
        dllpath = os.path.join(os.path.abspath(os.path.dirname(__file__)), "../../libs/")
        if "Windows" in platform.system():
            dln = "ctptrade_api.dll"
        elif "Linux" in platform.system():
            dln = "libctptrade_api.so"
        elif "Darwin" in platform.system():
            dln = "libctptrade_api.dylib"
        absolute_dllfile_path = os.path.join(dllpath,dln)
        if not os.path.exists(absolute_dllfile_path):
            raise Exception("缺少DLL接口文件")

        # make log dir for api log
        self.pszFlowPath = os.path.join(os.getcwd(), pszFlowPath)
        if not os.path.exists(self.pszFlowPath):
            os.mkdir(self.pszFlowPath)
 
        dlldir = os.path.split(absolute_dllfile_path)[0]
        # change work directory
        cur_path = os.getcwd()
        os.chdir(dlldir)

        self.h = CDLL(absolute_dllfile_path)

        self.h.tCreateApi.argtypes = [c_char_p]
        self.h.tCreateApi.restype = c_void_p

        self.h.tCreateSpi.argtypes = []
        self.h.tCreateSpi.restype = c_void_p

        self.h.tGetApiVersion.argtypes = []
        self.h.tGetApiVersion.restype = c_char_p

        self.h.tGetTradingDay.argtypes = [c_void_p]
        self.h.tGetTradingDay.restype = c_char_p

        self.h.dCTP_GetSystemInfo.argtypes = [c_char_p, c_int]
        self.h.dCTP_GetSystemInfo.restype = c_int

        self.h.dCTP_GetSystemInfoUnAesEncode.argtypes = [c_char_p, c_int]
        self.h.dCTP_GetSystemInfoUnAesEncode.restype = c_int

        self.h.dCTP_GetDataCollectApiVersion.argtypes = []
        self.h.dCTP_GetDataCollectApiVersion.restype = c_char_p

        self.api = None
        self.pSpi = None
